[package]
name = "actix_route_rate_limiter"
version = "0.1.3"
edition = "2021"
description = "Actix Web middleware to rate limit routes"
license = "MIT OR Apache-2.0"

[dependencies]
actix-web = "4.0"
actix-service = "2.0.2"
chrono = "0.4"
futures = "0.3"
tokio = "1.38.1"

[dev-dependencies]
actix-rt = "2.5"
reqwest = "0.12.5"
