[package]
name = "actix_route_rate_limiter"
version = "0.2.1"
edition = "2021"
description = "Actix Web middleware to rate limit routes"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/actix_route_rate_limiter/0.1.2/actix_route_rate_limiter/"
readme = "README.md"
repository = "https://github.com/harr1424/Actix-Route-Rate-Limiter"
keywords = ["actix-web-middleware", "rate-limit", "actix"]


[dependencies]
actix-web = "4.0"
actix-service = "2.0.2"
chrono = "0.4"
futures = "0.3"
tokio = "1.38.1"
log = "0.4.22"

[dev-dependencies]
actix-rt = "2.5"
reqwest = "0.12.5"
env_logger = "0.11.3"
lazy_static = "1.5.0"
